<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <EditText
        android:id = "@+id/signUp_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/gender"/>
        <RadioGroup
            android:id = "@+id/radioGender"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation = "horizontal">
            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/female"/>
            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/male"/>
            <RadioButton
                android:id="@+id/radioOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/other"/>
        </RadioGroup>
    </LinearLayout>



    <EditText
        android:id = "@+id/signUp_age"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="number"/>

    <EditText
        android:id = "@+id/signUp_email"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id = "@+id/signUp_password"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id = "@+id/signUp_passwordConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>

    <Button
        android:id = "@+id/createAccount_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"/>

    <Button
        android:id = "@+id/returnHome_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"/>



</LinearLayout>