<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity = "center">
        <Button
            android:id = "@+id/signOut_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/sign_out"/>
        <Button
            android:id="@+id/deleteAcct_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/welcome"
        android:layout_gravity = "center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/setting"
        android:layout_gravity = "center"/>
    <Button
        android:id="@+id/check_matches_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matches"
        android:layout_gravity="center"/>

    <EditText
        android:id = "@+id/updatePass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint = "@string/password_hint"
        android:layout_gravity="center"
        android:inputType = "textPassword"/>
    <Button
        android:id = "@+id/updatePass_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/update_password"/>


</LinearLayout>