<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/list_of_match"
    android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_marginLeft="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_info"
            android:layout_marginLeft="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfect_match"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/matched_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <Button
        android:id="@+id/return_home_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_home"
        android:layout_gravity="center"/>
</LinearLayout>