<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/matched_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/first_name"
            android:paddingLeft="20dp"/>
        <TextView
            android:id="@+id/matched_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/pair_email"
            android:paddingLeft="30dp"/>
        <TextView
            android:id="@+id/matched_match_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/pair_match"
            android:paddingLeft="30dp"/>
    </LinearLayout>

</LinearLayout>